5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1596_2049.log
== TEST (2019-03-23 15:53:18) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
total=(dividendo//divisor%)
print(total)
-- ERROR:
File "XXXX", line 3
    total=(dividendo//divisor%)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:56:14) 
-- CODE:
dividendo=int(input("456"))
divisor=int(input("15"))
total=(456//15)
print(total)
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 15:56:21) 
-- CODE:
dividendo=int(input("456"))
divisor=int(input("15"))
total=(456//15)
print(total)
-- EXECUTION TIME:
0.139928
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
30
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
30
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:58:59) 
-- CODE:
dividendo=int(input("456"))
divisor=int(input("15"))
print(dividendo//divisor=%)
-- ERROR:
File "XXXX", line 3
    print(dividendo//divisor=%)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 15:59:13) 
-- CODE:
dividendo=int(input("456"))
divisor=int(input("15"))
print(dividendo//divisor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:00:44) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
print(dividendo//divisor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:01:25) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
print(dividendo//divisor)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:01:42) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
print(dividendo//divisor%)
-- ERROR:
File "XXXX", line 3
    print(dividendo//divisor%)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 16:05:35) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
quociente=(dividendo//divisor)
resto=(dividendo%divisor)
print(dividendo,divisor,quociente,resto)
-- OUTPUT:
8 5 1 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 16:05:55) 
-- CODE:
dividendo=int(input("digite o numero"))
divisor=int(input("digite o numero"))
quociente=(dividendo//divisor)
resto=(dividendo%divisor)
print(dividendo,divisor,quociente,resto)
-- EXECUTION TIME:
0.226274
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8 5 1 3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14 2 7 0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347 2 173 1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
